@@ -101,6 +101,8 @@ sub run {
             if ($field eq 'xc-package-type') {
                 tag 'xc-package-type-in-debian-control', "line $.";
             }
+            tag 'debian-control-has-empty-field', "$1 (line $.)"
+              if (/^(\S+):$/);
             unless (/^\S+: \S/ || /^\S+:$/) {
                 tag 'debian-control-has-unusual-field-spacing', "line $.";
             }
